# 3ddfav2_cpp

./: face3d_model.py  readme.md
cpp/mnn_demo/: CMakeLists.txt  demo.cpp  face3d_mnn.cpp  face3d_mnn.hpp
cpp/tengin_demo/: CMakeLists.txt  demo.cpp
